--- a/strings/src/main/res/values-ru/strings.xml
+++ b/strings/src/main/res/values-ru/strings.xml
@@ -47,7 +47,7 @@
   <string name="search">Поиск</string>
   <string name="not_granted_permission">Для действия, которое вы пытаетесь сделать, требуется разрешение, которое не предоставлено.</string>
   <string name="storage_runtime_permission_denied_title">Доступ к накопителю</string>
-  <string name="storage_runtime_permission_denied_desc">Без этих разрешений Collect не сможет получить доступ к опросам или сохранять ответы. Откройте приложение заново когда вы будете готовы предоставить доступ.</string>
+  <string name="storage_runtime_permission_denied_desc">Без этих разрешений FieldTask не сможет получить доступ к опросам или сохранять ответы. Откройте приложение заново когда вы будете готовы предоставить доступ.</string>
   <string name="location_runtime_permissions_denied_title">Доступ к геолокации</string>
   <!--Starting in Android 12, Android makes it possible to give precise or approximate location permissions to an application. ODK Collect only captures location if the precise location permission is granted.-->
   <string name="location_runtime_permissions_denied_desc">Без разрешения <b>Точное местоположение</b> Collect не может записать ваше местоположение. Повторите попытку, когда будете готовы предоставить его.</string>
