--- a/strings/src/main/res/values-sw/strings.xml
+++ b/strings/src/main/res/values-sw/strings.xml
@@ -46,7 +46,7 @@
   <string name="search">Tafuta</string>
   <string name="not_granted_permission">Kitendo unachijaribu kufanya kinahitaji ruhusa ambayo bado haijatolewa.</string>
   <string name="storage_runtime_permission_denied_title">Ruhusa ya kuhifadhi</string>
-  <string name="storage_runtime_permission_denied_desc">Bila hizi ruhusa Collect haiwezi kufikia fomu au kuhifadhi majibu. Fungua tena program ukiwa tayari kuziruhusu.</string>
+  <string name="storage_runtime_permission_denied_desc">Bila hizi ruhusa FieldTask haiwezi kufikia fomu au kuhifadhi majibu. Fungua tena program ukiwa tayari kuziruhusu.</string>
   <string name="location_runtime_permissions_denied_title">Ruhusa ya kuonesha eneo </string>
   <!--Starting in Android 12, Android makes it possible to give precise or approximate location permissions to an application. ODK Collect only captures location if the precise location permission is granted.-->
   <string name="camera_runtime_permission_denied_title">Ruhusa ya camera</string>
