--- a/strings/src/main/res/values-sq/strings.xml
+++ b/strings/src/main/res/values-sq/strings.xml
@@ -34,7 +34,7 @@
   <string name="filter_the_list">Filtro listën</string>
   <!--Displayed in search boxes for form lists or question types that involve search-->
   <string name="search">Kërko</string>
-  <string name="storage_runtime_permission_denied_desc">Pa këto leje Collect nuk mund të aksesojë format tuaja apo të ruajë përgjigjet. Rihapeni applikacionin kur të të jeni gati të lejoni ato.</string>
+  <string name="storage_runtime_permission_denied_desc">Pa këto leje FieldTask nuk mund të aksesojë format tuaja apo të ruajë përgjigjet. Rihapeni applikacionin kur të të jeni gati të lejoni ato.</string>
   <string name="location_runtime_permissions_denied_title">Lejo aksesin në vendndodhje</string>
   <!--Starting in Android 12, Android makes it possible to give precise or approximate location permissions to an application. ODK Collect only captures location if the precise location permission is granted.-->
   <string name="camera_runtime_permission_denied_title">Lejo aksesin në kamera</string>
