Reference FieldTask in messages

--- a/strings/src/main/res/values-bg/strings.xml
+++ b/strings/src/main/res/values-bg/strings.xml
@@ -50,11 +50,11 @@
   <string name="storage_runtime_permission_denied_desc">Без тези разрешения, приложението няма достъп до вашите формуляри и не може да попълва такива. </string>
   <string name="location_runtime_permissions_denied_title">Рарешения за местоположението</string>
   <!--Starting in Android 12, Android makes it possible to give precise or approximate location permissions to an application. ODK Collect only captures location if the precise location permission is granted.-->
-  <string name="location_runtime_permissions_denied_desc">Без разрешението за <b>Точно местоположение</b> Collect не може да запише вашето местоположение. Моля, опитайте пак, когато сте готови да го одобрите.</string>
+  <string name="location_runtime_permissions_denied_desc">Без разрешението за <b>Точно местоположение</b> FieldTask не може да запише вашето местоположение. Моля, опитайте пак, когато сте готови да го одобрите.</string>
   <string name="camera_runtime_permission_denied_title">Разрешение за камера</string>
-  <string name="camera_runtime_permission_denied_desc">Без това разрешение Collect няма достъп до камерата на устройството. Моля, опитайте пак, когато сте готови да го одобрите.</string>
+  <string name="camera_runtime_permission_denied_desc">Без това разрешение FieldTask няма достъп до камерата на устройството. Моля, опитайте пак, когато сте готови да го одобрите.</string>
   <string name="record_audio_runtime_permission_denied_title">Разрешение за запис на аудио</string>
-  <string name="record_audio_runtime_permission_denied_desc">Без това разрешение Collect няма достъп до микрофона на устройството. Моля, опитайте пак, когато сте готови да го одобрите.</string>
+  <string name="record_audio_runtime_permission_denied_desc">Без това разрешение FieldTask няма достъп до микрофона на устройството. Моля, опитайте пак, когато сте готови да го одобрите.</string>
   <!--##############################################
     # FILL BLANK FORM
     ##############################################-->
