--- a/strings/src/main/res/values-de/strings.xml
+++ b/strings/src/main/res/values-de/strings.xml
@@ -1026,7 +1026,7 @@
   <!--Label for entity that has been created offline and is not on the server yet-->
   <string name="offline">Offline</string>
   <!--Error message displayed when a user opens a form with an unrecognized entity version-->
-  <string name="unrecognized_entity_version">Dieses Formular wird von dieser ODK Collect Version nicht unterstützt. Bitte Collect updaten. Falls dieses Problem weiterhin auftritt, melden Sie es der Person, die sie zur Datenerfassung beauftragt hat.\n\nForm Entities Spec Version: %s</string>
+  <string name="unrecognized_entity_version">Dieses Formular wird von dieser FieldTask Version nicht unterstützt. Bitte FieldTask updaten. Falls dieses Problem weiterhin auftritt, melden Sie es der Person, die sie zur Datenerfassung beauftragt hat.\n\nForm Entities Spec Version: %s</string>
   <!--##############################################
     # Crash handling
     ##############################################-->
@@ -1043,7 +1043,7 @@
   <!--First part of the message shown in the banner, informing the user that their device will soon be unsupported-->
   <string name="min_sdk_deprecation_banner_title">Upgrades können bald nicht mehr auf ihrem Gerät installiert werden.</string>
   <!--Second part of the message shown in the banner, informing the user that their device will soon be unsupported-->
-  <string name="min_sdk_deprecation_banner_message">Ab Anfang 2026 benötigt ODK Collect Android 8+.</string>
+  <string name="min_sdk_deprecation_banner_message">Ab Anfang 2026 benötigt FieldTask Android 8+.</string>
   <!--Button text that opens a forum post with more information about upcoming device support changes-->
   <string name="min_sdk_deprecation_learn_more">Mehr erfahren</string>
   <!--Button text to dismiss the banner-->
@@ -1163,7 +1163,7 @@
   <!--Title displayed in a dialog before starting a form if there is a work to recover-->
   <string name="savepoint_recovery_dialog_title">Ihre Arbeit Wiederherstellen?</string>
   <!--Message displayed in a dialog before starting a form if there is a work to recover. Please format date appropriately for your language: http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html-->
-  <string name="savepoint_recovery_dialog_message">\'Collect wurde am \'EEE, MMM dd, yyyy \'um\' HH:mm\' unerwartet beendet und hat ihre Arbeit gespeichert.\n\nWollen Sie die gespeicherte Arbeit wiederherstellen oder verwerfen?\'</string>
+  <string name="savepoint_recovery_dialog_message">\'FieldTask wurde am \'EEE, MMM dd, yyyy \'um\' HH:mm\' unerwartet beendet und hat ihre Arbeit gespeichert.\n\nWollen Sie die gespeicherte Arbeit wiederherstellen oder verwerfen?\'</string>
   <!--Text for the button that accepts the recovery of the work-->
   <string name="recover">Wiederherstellen</string>
   <!--Text for the button that declines the recovery of the work-->
