--- a/strings/src/main/res/values-fi/strings.xml
+++ b/strings/src/main/res/values-fi/strings.xml
@@ -1026,7 +1026,7 @@
   <!--Label for entity that has been created offline and is not on the server yet-->
   <string name="offline">Offline</string>
   <!--Error message displayed when a user opens a form with an unrecognized entity version-->
-  <string name="unrecognized_entity_version">Tätä lomaketta ei tueta tässä ODK Collect -versiossa. Ole hyvä ja päivitä Collect. Jos ongelma jatkuu, ilmoita siitä henkilölle, joka pyysi sinua keräämään dataa.\n\nForm Entities spec versio: %s</string>
+  <string name="unrecognized_entity_version">Tätä lomaketta ei tueta tässä FieldTask -versiossa. Ole hyvä ja päivitä FieldTask. Jos ongelma jatkuu, ilmoita siitä henkilölle, joka pyysi sinua keräämään dataa.\n\nForm Entities spec versio: %s</string>
   <!--##############################################
     # Crash handling
     ##############################################-->
@@ -1043,7 +1043,7 @@
   <!--First part of the message shown in the banner, informing the user that their device will soon be unsupported-->
   <string name="min_sdk_deprecation_banner_title">Laitettasi ei kohta enää pysty päivittämään.</string>
   <!--Second part of the message shown in the banner, informing the user that their device will soon be unsupported-->
-  <string name="min_sdk_deprecation_banner_message">Alkaen vuoden 2026 alkupuolella, ODK Collect vaatii Android-version 8+.</string>
+  <string name="min_sdk_deprecation_banner_message">Alkaen vuoden 2026 alkupuolella, FieldTask vaatii Android-version 8+.</string>
   <!--Button text that opens a forum post with more information about upcoming device support changes-->
   <string name="min_sdk_deprecation_learn_more">Lisätietoja</string>
   <!--Button text to dismiss the banner-->
@@ -1163,7 +1163,7 @@
   <!--Title displayed in a dialog before starting a form if there is a work to recover-->
   <string name="savepoint_recovery_dialog_title">Haluatko palauttaa työsi?</string>
   <!--Message displayed in a dialog before starting a form if there is a work to recover. Please format date appropriately for your language: http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html-->
-  <string name="savepoint_recovery_dialog_message">\'Collect sulkeutui odottamattomasti\' EEE dd.MM.yyyy \'kello\' HH:mm\' ja tallensi työsi.\n\nHaluatko palauttaa työsi?\'</string>
+  <string name="savepoint_recovery_dialog_message">\'FieldTask sulkeutui odottamattomasti\' EEE dd.MM.yyyy \'kello\' HH:mm\' ja tallensi työsi.\n\nHaluatko palauttaa työsi?\'</string>
   <!--Text for the button that accepts the recovery of the work-->
   <string name="recover">Palauta</string>
   <!--Text for the button that declines the recovery of the work-->
