--- a/strings/src/main/res/values-fr/strings.xml
+++ b/strings/src/main/res/values-fr/strings.xml
@@ -1030,7 +1030,7 @@
   <!--Label for entity that has been created offline and is not on the server yet-->
   <string name="offline">Hors ligne</string>
   <!--Error message displayed when a user opens a form with an unrecognized entity version-->
-  <string name="unrecognized_entity_version">Ce formulaire n\'est pas supporté par cette version d\'ODK. Merci de mettre à jour Collect. Si vous continuez à avoir ce problème, faites-le savoir à la personne qui vous a demandé de collecter des données.
+  <string name="unrecognized_entity_version">Ce formulaire n\'est pas supporté par cette version de FieldTask. Merci de mettre à jour FieldTask. Si vous continuez à avoir ce problème, faites-le savoir à la personne qui vous a demandé de collecter des données.
 \n\nVersion de la spécification des Entités de Formulaire : %s</string>
   <!--##############################################
     # Crash handling
@@ -1048,7 +1048,7 @@
   <!--First part of the message shown in the banner, informing the user that their device will soon be unsupported-->
   <string name="min_sdk_deprecation_banner_title">Votre appareil ne pourra bientôt plus être mis à jour. </string>
   <!--Second part of the message shown in the banner, informing the user that their device will soon be unsupported-->
-  <string name="min_sdk_deprecation_banner_message">A partir de début 2026, ODK Collect nécessitera Android 8+.</string>
+  <string name="min_sdk_deprecation_banner_message">A partir de début 2026, FieldTask nécessitera Android 8+.</string>
   <!--Button text that opens a forum post with more information about upcoming device support changes-->
   <string name="min_sdk_deprecation_learn_more">En savoir plus</string>
   <!--Button text to dismiss the banner-->
@@ -1176,7 +1176,7 @@
   <!--Title displayed in a dialog before starting a form if there is a work to recover-->
   <string name="savepoint_recovery_dialog_title">Récupérer votre travail ?</string>
   <!--Message displayed in a dialog before starting a form if there is a work to recover. Please format date appropriately for your language: http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html-->
-  <string name="savepoint_recovery_dialog_message">\'Collect s\'\'est arrété de manière inattendue le \'EEE dd MMM yyyy\' à \'HH\'h\'mm\' et a sauvegardé votre travail.\n\nVoulez vous le récupérer ou l\'\'ignorer ?\'</string>
+  <string name="savepoint_recovery_dialog_message">\'FieldTask s\'\'est arrété de manière inattendue le \'EEE dd MMM yyyy\' à \'HH\'h\'mm\' et a sauvegardé votre travail.\n\nVoulez vous le récupérer ou l\'\'ignorer ?\'</string>
   <!--Text for the button that accepts the recovery of the work-->
   <string name="recover">Récupérer ?</string>
   <!--Text for the button that declines the recovery of the work-->
