--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -1285,7 +1285,7 @@
     <string name="offline">Offline</string>
 
     <!-- Error message displayed when a user opens a form with an unrecognized entity version -->
-    <string name="unrecognized_entity_version">This form is not supported by this version of ODK Collect. Please upgrade Collect. If you keep having this problem, report it to the person who asked you to collect data.\n\nForm Entities spec version: %s</string>
+    <string name="unrecognized_entity_version">This form is not supported by this version of FieldTask. Please upgrade FieldTask. If you keep having this problem, report it to the person who asked you to collect data.\n\nForm Entities spec version: %s</string> <!-- smap -->
 
     <!--
     ##############################################
@@ -1312,7 +1312,7 @@
     <!-- First part of the message shown in the banner, informing the user that their device will soon be unsupported -->
     <string name="min_sdk_deprecation_banner_title">Your device will soon no longer be able to upgrade.</string>
     <!-- Second part of the message shown in the banner, informing the user that their device will soon be unsupported -->
-    <string name="min_sdk_deprecation_banner_message">Starting in early 2026, ODK Collect requires Android 8+.</string>
+    <string name="min_sdk_deprecation_banner_message">Starting in early 2026, FieldTask requires Android 8+.</string> <!-- smap -->
     <!-- Button text that opens a forum post with more information about upcoming device support changes -->
     <string name="min_sdk_deprecation_learn_more">Learn more</string>
     <!-- Button text to dismiss the banner -->
@@ -1466,7 +1466,7 @@
     <!-- Title displayed in a dialog before starting a form if there is a work to recover -->
     <string name="savepoint_recovery_dialog_title">Recover your work?</string>
     <!-- Message displayed in a dialog before starting a form if there is a work to recover. Please format date appropriately for your language: http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html-->
-    <string name="savepoint_recovery_dialog_message">\'Collect closed unexpectedly on \'EEE, MMM dd, yyyy \'at\' HH:mm\' and saved your work.\n\nWould you like to recover or discard it?\'</string>
+    <string name="savepoint_recovery_dialog_message">\'FieldTask closed unexpectedly on \'EEE, MMM dd, yyyy \'at\' HH:mm\' and saved your work.\n\nWould you like to recover or discard it?\'</string> <!-- smap -->
     <!-- Text for the button that accepts the recovery of the work -->
     <string name="recover">Recover</string>
     <!-- Text for the button that declines the recovery of the work -->
