--- a/strings/src/main/res/values-rw/strings.xml
+++ b/strings/src/main/res/values-rw/strings.xml
@@ -38,7 +38,7 @@
   <string name="search">Shakisha</string>
   <string name="not_granted_permission">Igikorwa mugerageza gutangira kirasaba uruhushya, kandi ntirwatanzwe</string>
   <string name="storage_runtime_permission_denied_title">Uburenganzira ku bubiko</string>
-  <string name="storage_runtime_permission_denied_desc">Udafite ubwo burenganzira FieldTask ntabwo ishobora kwemera form cg ibike amakuru. Ongera ufungure iyo application mugihe ufite ubwo burenganzira</string>
+  <string name="storage_runtime_permission_denied_desc">Udafite ubwo burenganzira application ntabwo ishobora kwemera form cg ibike amakuru. Ongera ufungure iyo application mugihe ufite ubwo burenganzira</string>
   <string name="location_runtime_permissions_denied_title">Uburenganzira bwokwerekana location </string>
   <!--Starting in Android 12, Android makes it possible to give precise or approximate location permissions to an application. ODK Collect only captures location if the precise location permission is granted.-->
   <string name="camera_runtime_permission_denied_title">Ha uruhushya Camera</string>
