--- a/strings/src/main/res/values-zh/strings.xml
+++ b/strings/src/main/res/values-zh/strings.xml
@@ -47,7 +47,7 @@
   <string name="search">搜索</string>
   <string name="not_granted_permission">您没有权限开启此活动。</string>
   <string name="storage_runtime_permission_denied_title">存储权限</string>
-  <string name="storage_runtime_permission_denied_desc">没有这些权限，FieldTask应用将无法访问您的表格或保存答案。请重启应用以授予权限。</string>
+  <string name="storage_runtime_permission_denied_desc">没有这些权限，应用将无法访问您的表格或保存答案。请重启应用以授予权限。</string>
   <string name="location_runtime_permissions_denied_title">位置权限</string>
   <!--Starting in Android 12, Android makes it possible to give precise or approximate location permissions to an application. ODK Collect only captures location if the precise location permission is granted.-->
   <string name="location_runtime_permissions_denied_desc">没有 <b>精确位置</b> 权限， Collect应用无法记录您的位置。请重新授予后重试。</string>
